# zero2prodRust

./: .dockerignore  Cargo.toml  Dockerfile  README.md  dbConnection  spec.yaml
.github/workflows/: general.yml
.sqlx/: query-bebea0d30857126df255d49a08c8890b7f7029e54fffefbccaa65130eccd5bb9.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20240616070516_create_subscriptions_table_again.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
